// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainingResultView /> should render component when has not wrong 1`] = `
<div
  className="sc-bxivhb iNMnvU"
>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      正解数
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      10 / 10
    </div>
  </div>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "32px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      平均回答時間
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      2.5秒
    </div>
  </div>
  <div
    className="sc-ifAKCX fVKAHz"
  >
    <a
      className="twitter-share-button"
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 10問中 10問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSvgIcon-fontSizeSmall-42 Component-normalIcon-4"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      メニューに戻る
    </span>
    <span
      className="MuiTouchRipple-root-44"
    />
  </button>
</div>
`;

exports[`<TrainingResultView /> should render component when has wrong 1`] = `
<div
  className="sc-bxivhb iNMnvU"
>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      正解数
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      8 / 10
    </div>
  </div>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "32px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      平均回答時間
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      2.5秒
    </div>
  </div>
  <div
    className="sc-ifAKCX fVKAHz"
  >
    <a
      className="twitter-share-button"
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 10問中 8問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": "16px",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSvgIcon-fontSizeSmall-42 Component-normalIcon-4"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
      間違えた歌の練習をする
    </span>
    <span
      className="MuiTouchRipple-root-44"
    />
  </button>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSvgIcon-fontSizeSmall-42 Component-normalIcon-4"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
      メニューに戻る
    </span>
    <span
      className="MuiTouchRipple-root-44"
    />
  </button>
</div>
`;
